Add workaround to populate plug-ins menu
The previous method had a direct dependence on the main menu and would fail, as the menu had not been loaded at this point. This is because the plugin manager is now initialized before the UI is loaded.

--- a/Interfaces/Base.lproj/MainMenu.xib
+++ b/Interfaces/Base.lproj/MainMenu.xib
@@ -9,6 +9,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ViennaApp">
             <connections>
+                <outlet property="articleMenu" destination="300" id="299-Bq-gOu"/>
                 <outlet property="delegate" destination="233" id="319"/>
                 <outlet property="dockMenu" destination="JWi-Bw-kAV" id="S3Z-Bl-WjG"/>
                 <outlet property="filterMenu" destination="1118" id="ulZ-To-isZ"/>
